syntax = "proto3";

package protos;

option go_package = "github.com/en/siren/protos";

import "google/protobuf/timestamp.proto";

service Sql {
	rpc Transfers (TransfersRequest) returns (TransfersResponse);

	rpc GetOrderHistory (GetOrderHistoryRequest) returns (GetOrderHistoryReply) {}
	rpc GetOrderDeals (GetOrderDealsRequest) returns (GetOrderDealsReply) {}
	rpc GetOrderDetailFinished (GetOrderDetailFinishedRequest) returns (GetOrderDetailFinishedReply) {}
	rpc GetMarketUserDeals (GetMarketUserDealsRequest) returns (GetMarketUserDealsReply) {}
}

message TransfersRequest {
	string user_id = 1;
	string currency = 2;
	string type = 3;
	google.protobuf.Timestamp since = 4;
	google.protobuf.Timestamp until = 5;
	int32 limit = 6;
}

message Transfer {
	string id = 1;
	string currency = 2;
	string type = 3;
	string amount  = 4;
	string status  = 5;
	google.protobuf.Timestamp created_at = 6;
	google.protobuf.Timestamp updated_at = 7;
}

message TransfersResponse {
	repeated Transfer transfers = 1;
}

message GetOrderHistoryRequest {
	string user_id = 1;
	string market = 2;
	int64 start_time = 3;
	int64 end_time = 4;
	int32 offset = 5;
	int32 limit = 6;
	int32 side = 7;
}

message OrderHistory {
	uint64 id = 1;
	int64 ctime = 2;
	int64 ftime = 3;
	string user = 4;
	string market = 5;
	string source = 6;
	uint32 type = 7;
	uint32 side = 8;
	string price = 9;
	string amount = 10;
	string taker_fee = 11;
	string maker_fee = 12;
	string deal_stock = 13;
	string deal_money = 14;
	string deal_fee = 15;
}

message GetOrderHistoryReply {
	repeated OrderHistory items = 1;
}

message GetOrderDealsRequest {
	string order_id = 1;
	int32 offset = 2;
	int32 limit = 3;
}

message OrderDeals {
	int64 time = 1;
	string user = 2;
	uint64 id = 3;
	int32 role = 4;
	string price = 5;
	string amount = 6;
	string deal = 7;
	string fee = 8;
	uint64 deal_order_id = 9;
}

message GetOrderDealsReply {
	repeated OrderDeals items = 1;
}

message GetOrderDetailFinishedRequest {
	string order_id = 1;
}

message GetOrderDetailFinishedReply {
	uint64 id = 1;
	int64 ctime = 2;
	int64 ftime = 3;
	string user = 4;
	string market = 5;
	string source = 6;
	uint32 type = 7;
	uint32 side = 8;
	string price = 9;
	string amount = 10;
	string taker_fee = 11;
	string maker_fee = 12;
	string deal_stock = 13;
	string deal_money = 14;
	string deal_fee = 15;
}

message GetMarketUserDealsRequest {
	string user_id = 1;
	string market = 2;
	int32 offset = 3;
	int32 limit = 4;
}

message MarketUserDeals {
	int64 time = 1;
	string user = 2;
	uint64 id = 3;
	int32 side = 4;
	int32 role = 5;
	string price = 6;
	string amount = 7;
	string deal = 8;
	string fee = 9;
	uint64 deal_order_id = 10;
	string market = 11;
}

message GetMarketUserDealsReply {
	repeated MarketUserDeals items = 1;
}
